Fix Shared profile picture overlap fullscreen player

--- a/client/css/videos.css
+++ b/client/css/videos.css
@@ -6,5 +6,5 @@
 #add-video-modal{}
   #add-video-modal form{margin:0}
 
-.shared-users {overflow: hidden;max-height:104px;font-size:0;position:relative;}
+.shared-users {overflow: hidden;max-height:104px;font-size:0;}
   .shared-users img {height:50px;width:50px;margin:0 4px 4px 0;}
